--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,9 @@
+h1. G for Gavin
+
+A ruby on rails blog based on Enki.
+
+_____________________________________________________________________________________
+
 h1. Enki
 
 A Ruby on Rails blogging app for the fashionable developer.
