Added banner and navigation menu on the frontpage. TODO: Hover over effect on those menu button

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 TODO List:
 
-style of admin page
 use Google login instead of openID for login
-overall style of the blog page
+Frontpage menu underline when on current page
+
